# SensorSuite

./: .gitignore  README.md
.github/workflows/: firmware-build.yml
casing/: readme.txt
firmware/: .gitignore  CMakeLists.txt  Doxyfile  Kconfig  pm_static.yml  prj.conf  readme.md  readme.txt
firmware/boards/boards/: nrf54l15dk_nrf54l15_cpuapp_ns.overlay
firmware/src/: main.c
firmware/src/services/: error_service.c  error_service.h  log_service.c  log_service.h  sense_service.c  sense_service.h  time_service.c  time_service.h
firmware/src/vl53l4cd_ulp_api/: VL53L4CD_ULP_api.c  VL53L4CD_ULP_api.h  VL53L4CD_ULP_platform.c  VL53L4CD_ULP_platform.h
hardware/: azss.kicad_pcb  azss.kicad_prl  azss.kicad_pro  azss.kicad_sch  azss.kicad_sch-bak  readme.md  readme.txt
hardware/GERBERS_0-11/: azss-2V8.gbr  azss-B_Cu.gbr  azss-B_Mask.gbr  azss-B_Paste.gbr  azss-B_Silkscreen.gbr  azss-Edge_Cuts.gbr  azss-F_Cu.gbr  azss-F_Mask.gbr  azss-F_Paste.gbr  azss-F_Silkscreen.gbr  azss-GND.gbr  azss-NPTH.drl  azss-PTH.drl  azss-job.gbrjob
hardware/GERBERS_1-01/: azss-2V8.gbr  azss-B_Cu.gbr  azss-B_Mask.gbr  azss-B_Paste.gbr  azss-B_Silkscreen.gbr  azss-Edge_Cuts.gbr  azss-F_Cu.gbr  azss-F_Mask.gbr  azss-F_Paste.gbr  azss-F_Silkscreen.gbr  azss-GND.gbr  azss-NPTH.drl  azss-PTH.drl  azss-job.gbrjob
hardware/GERBERS_1-02/: azss-2V8.gbr  azss-B_Cu.gbr  azss-B_Mask.gbr  azss-B_Paste.gbr  azss-B_Silkscreen.gbr  azss-Edge_Cuts.gbr  azss-F_Cu.gbr  azss-F_Mask.gbr  azss-F_Paste.gbr  azss-F_Silkscreen.gbr  azss-GND.gbr  azss-NPTH.drl  (+2 more)
software/: azss_client.py  readme.md  readme.txt
(+14 files in other folders)
